--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "clothing-ecommerce-site",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "axios": "^0.19.0",
     "firebase": "^6.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
